--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/admin"
             android:icon="@drawable/ic_baseline_settings_24"
-            android:title="@string/profile_title" />
+            android:title="@string/admin_title" />
 
 
     </group>
