--- a/app/src/main/res/layout/edit_product.xml
+++ b/app/src/main/res/layout/edit_product.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -21,9 +20,9 @@
             android:id="@+id/edit_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/edit_product_name_textInput_hint"
             android:imeOptions="flagNoExtractUi"
-            android:inputType="text"
-            android:hint="@string/edit_product_name_textInput_hint" />
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -47,7 +46,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edit_product_category_id_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -55,13 +54,13 @@
         app:layout_constraintStart_toStartOf="@+id/edit_product_price_layout"
         app:layout_constraintTop_toBottomOf="@+id/edit_product_price_layout">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <AutoCompleteTextView
             android:id="@+id/edit_product_category_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/edit_product_category_id_textInput_hint"
             android:imeOptions="flagNoExtractUi"
-            android:inputType="text"
-            android:hint="@string/edit_product_category_id_textInput_hint" />
+            android:inputType="none" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
