--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -29,7 +29,7 @@
         android:id="@+id/new_category_desc_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@+id/new_category_name_layout"
         app:layout_constraintStart_toStartOf="@+id/new_category_name_layout"
